--- a/basicappmvp/app/src/main/res/layout/activity_main.xml
+++ b/basicappmvp/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.qwerapps.basicappmvp.categories.CategoriesActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -12,4 +18,5 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
