--- a/basicappmvp/app/src/main/res/layout/activity_main.xml
+++ b/basicappmvp/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.qwerapps.basicappmvp.categories.CategoriesActivity">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,4 +22,4 @@
 
     </android.support.v7.widget.RecyclerView>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
