--- a/basicappmvp/app/src/main/res/layout/item.xml
+++ b/basicappmvp/app/src/main/res/layout/item.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         >
         <RelativeLayout
+            android:id="@+id/gradient_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
